--- a/style.css
+++ b/style.css
@@ -13,21 +13,85 @@ html {
   text-rendering: optimizeLegibility;
   font-size: 20px;
 }
+
 .row {
   max-width: 1140px;
   margin: 0 auto;
+
 }
+
+.box {
+  padding: 1%;
+}
+
+section {
+  padding: 80px 0;
+}
+
 /******** HEADINGS ***********/
-h1 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #fff;
-  font-size: 240%;
-  font-weight: 300;
+h1,
+h2,
+h3 {
+
+  font-weight: 380;
   text-transform: uppercase;
   letter-spacing: 1px;
-  word-spacing: 4px;
+
 }
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 28px;
+  color: #fff;
+  font-size: 240%;
+  word-spacing: 4px;
+
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h3 {
+  font-size: 110%;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: "";
+  width: 180px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+/******** PARAGRAPHS ***********/
+.long-copy {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+
+}
+
+.box p {
+  font-size: 90%;
+  line-height: 145%;
+  color:
+}
+
+/******** ICONS ***********/
+.icon-big {
+  font-size: 350%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px;
+
+}
+
 
 /******** BUTTONS ***********/
 .btn:link,
@@ -57,6 +121,7 @@ h1 {
 .btn:hover {
   background-color: #e67e22;
 }
+
 /******** HEADER *********/
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
@@ -65,6 +130,7 @@ header {
   background-position: center;
   height: 100vh;
 }
+
 .hero-tex-box {
   position: absolute;
   width: 1140px;
@@ -72,27 +138,55 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .logo {
   height: 100px;
   width: auto;
   float: left;
   margin-top: 20px;
 }
+
 .main-nav {
   float: right;
   list-style: none;
   margin-top: 55px;
 }
+
 .main-nav li {
   display: inline-block;
   margin-left: 40px;
 }
+
 .main-nav li a {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 90%;
 }
+
 .main-nav li:hover {
   border-bottom: 1px solid #e67e22;
+}
+
+/******** MEALS PHOTOS *********/
+
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+}
+
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+}
+
+.meal-photo img {
+  width: 100%;
+  height: auto;
 }
