--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ html {
   font-size: 20px;
 }
 
+.clearfix {
+  zoom: 1
+}
+
+.clearfix:after {
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+
 .row {
   max-width: 1140px;
   margin: 0 auto;
@@ -62,7 +74,7 @@ h3 {
 h2:after {
   display: block;
   height: 2px;
-  background-color: #e67e22;
+  background-color: #FF69B4;
   content: "";
   width: 180px;
   margin: 0 auto;
@@ -80,14 +92,14 @@ h2:after {
 .box p {
   font-size: 90%;
   line-height: 145%;
-  color:
+
 }
 
 /******** ICONS ***********/
 .icon-big {
   font-size: 350%;
   display: block;
-  color: #e67e22;
+  color: #FF69B4;
   margin-bottom: 10px;
 
 }
@@ -108,18 +120,18 @@ h2:after {
 
 .one:link,
 .one:visited {
-  /* background-color: #e67e22; */
+  /* background-color: #FF69B4; */
   outline: none;
-  border: 1px solid #e67e22;
+  border: 1px solid #FF69B4;
 }
 
 .two:link,
 .two:visited {
-  border: 1px solid #e67e22;
+  border: 1px solid #FF69B4;
 }
 
 .btn:hover {
-  background-color: #e67e22;
+  background-color: #FF69B4;
 }
 
 /******** HEADER *********/
@@ -165,7 +177,12 @@ header {
 }
 
 .main-nav li:hover {
-  border-bottom: 1px solid #e67e22;
+  border-bottom: 1px solid #FF69B4;
+}
+
+/******** FEATURES *********/
+.section-features .long-copy {
+  margin-bottom: 30px;
 }
 
 /******** MEALS PHOTOS *********/
@@ -184,9 +201,71 @@ header {
 .meal-photo {
   width: 100%;
   margin: 0;
+  overflow: hidden;
+  background-color: #000;
 }
 
 .meal-photo img {
+  opacity: 0.7;
   width: 100%;
   height: auto;
+  transform: scale(1.15);
+  transition: transform 0.5s, opacity 0.5s;
 }
+
+.section-meals {
+  padding: 0;
+}
+
+.meal-photo img:hover {
+  transform: scale(1.03);
+  opacity: 1;
+}
+
+/******** HOW IT WORKS *********/
+
+
+.steps-box:first-child {
+  text-align: right;
+  padding-right: 3%;
+}
+
+.steps-box:last-child {
+
+  padding-left: 3%;
+}
+
+.app-screen {
+  width: 40%;
+}
+
+.works-step {
+  margin-bottom: 50px;
+}
+
+.works-step div {
+  color:
+    #FF69B4;
+  border-radius: 50%;
+  border: 2px solid #FF69B4;
+  display: inline-block;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  padding: 5px;
+  float: left;
+  margin-right: 5%;
+  font-size: 150%;
+}
+
+.btn-app img {
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.works-step:last-of-type {
+  margin-bottom: 60px;
+}
+
+/******** CITIES *********/
