--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ header {
   background-size: cover;
   background-position: center;
   height: 100vh;
+  background-attachment: fixed;
 }
 
 .hero-tex-box {
@@ -310,4 +311,31 @@ a:hover,
 a:active {
   color: #555;
   border-bottom: 2px solid transparent
+}
+
+/******** CUSTOMERS *********/
+
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+  background-size: cover;
+  color: white;
+  background-attachment: fixed;
+}
+
+blockquote {
+  padding: 2px;
+  font-style: italic;
+  line-height: 145%;
+}
+
+cite {
+  font-size: 90%;
+  margin-top: 25px;
+  display: block;
+}
+
+cite img {
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
