--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: #fff;
   color: #555;
   font-family: "Lato", "Arial", "sans-serif";
@@ -12,6 +13,7 @@ html {
   font-size: 20px;
   text-rendering: optimizeLegibility;
   font-size: 20px;
+  overflow-x: hidden;
 }
 
 .clearfix {
@@ -338,31 +340,38 @@ cite img {
 .section-plans {
   background-color: #f4f4f4;
 }
+
 .plan-box {
   background-color: #fff;
   border-radius: 5px;
   width: 90%;
   margin-left: 5%;
 }
+
 .plan-box div {
   padding: 15px;
   border-bottom: 1px solid #e8e8e8;
 }
+
 .plan-price {
   font-size: 300%;
   margin-bottom: 10px;
   font-weight: 100;
   color: #ff69b4;
 }
+
 .plan-price-meal {
   font-size: 80%;
 }
+
 .plan-box ul {
   list-style: none;
 }
+
 .plan-box ul li {
   padding: 5px 0;
 }
+
 .plan-box div:last-child {
   text-align: center;
 }
@@ -372,20 +381,24 @@ footer {
   background-color: #333;
   padding: 60px;
 }
+
 .footer-nav {
   list-style: none;
   float: left;
 }
+
 .social-links {
   list-style: none;
   float: right;
   margin-left: 450px;
 }
+
 .footer-nav li,
 .social-links li {
   display: inline-block;
   margin-right: 20px;
 }
+
 footer p {
   color: #888;
   text-align: center;
