--- a/queries.css
+++ b/queries.css
@@ -3,7 +3,66 @@
 @media only screen and (max-width:480px) {}
 
 /* from 481 to 767px */
-@media only screen and (max-width:767px) {}
+@media only screen and (max-width:767px) {
+    body {
+        font-size: 16px;
+    }
+
+    section {
+        padding: 30px 0;
+    }
+
+    .row,
+    .hero-tex-box {
+        padding: 0 4%;
+    }
+
+    .col {
+        width: 100%;
+    }
+
+    /* .main-nav {
+        display: none;
+    } */
+
+    .long-copy {
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    h1 {
+        font-size: 180%;
+    }
+
+    h2 {
+        font-size: 150%;
+    }
+
+    .app-screen {
+        width: 40%;
+    }
+
+    .steps-box:first-child {
+        text-align: center;
+    }
+
+    .works-step div {
+        height: 40px;
+        width: 40px;
+        margin-right: 15px;
+        padding: 4px;
+        font-size: 120%;
+    }
+
+    .works-step {
+        margin-bottom: 20px;
+    }
+
+    .works-step:last-of-type {
+        margin-bottom: 20px;
+    }
+
+}
 
 /* from 769 to 1023px */
 @media only screen and (max-width:1023px) {
